<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:application="ml.docilealligator.infinityforreddit.activities.MainActivity">

    <item
        android:id="@+id/action_search_main_activity"
        android:orderInCategory="1"
        android:title="@string/action_search"
        android:icon="@drawable/ic_search_toolbar_24dp"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_create_post_main_activity"
        android:orderInCategory="2"
        android:title="@string/content_description_submit_post"
        android:icon="@drawable/ic_add_day_night_24dp"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_sort_main_activity"
        android:orderInCategory="3"
        android:title="@string/action_sort"
        android:icon="@drawable/ic_sort_toolbar_24dp"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_refresh_main_activity"
        android:orderInCategory="4"
        android:title="@string/action_refresh"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_change_post_layout_main_activity"
        android:orderInCategory="5"
        android:title="@string/action_change_post_layout"
        app:showAsAction="never" />

    <!-- Ordered to land directly above PostFragment's "More Options" (103) in the merged menu. -->
    <item
        android:id="@+id/action_open_clipboard_reddit_link_main_activity"
        android:orderInCategory="102"
        android:title="@string/action_open_clipboard_reddit_link"
        app:showAsAction="never" />
</menu>